# corte3-bda-243678

./: .gitignore  CLAUDE.md  Cuaderno_ataques.md  README.md  docker-compose.yaml  package-lock.json  package.json
api/: Dockerfile  main.py  pyproject.toml
api/lib/: auth.py  constants.py  db.py  roles.py
api/model/: characterValidator.py  dates.py  owner.py  pet.py  response.py  vaccine.py  vet.py
api/queries/: baseQueries.py  user.py  userQueries.py
api/queries/admin/: queries.py
api/routes/: genericRouter.py
db/: 2-procedures.sql  3-triggers.sql  4-functions.sql  5-views.sql  5-vw.sql  6-rls.sql  6-roles.sql  7-rls.sql  99-roles.sql
src/app/: layout.tsx  page.tsx
src/app/(session)/: layout.tsx
src/app/(session)/admin/: page.tsx
src/app/(session)/recep/: page.tsx
src/app/(session)/vet/: page.tsx
src/app/api/[name]/: route.ts
src/app/api/[name]/[id]/: route.ts
src/app/api/[name]/search/[search]/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/name/: route.ts
src/app/api/owner/: route.ts
src/app/api/vet/login/: route.ts
src/app/components/: session_card.tsx
src/app/login/: page.tsx
src/components/: objectEditor.tsx  objectViewer.tsx  session_card.tsx  tableViewer.tsx
src/interfaces/: responses.ts
src/interfaces/requests/: dateRequest.ts  ownerRequest.ts  petRequest.ts  vaccineRequest.ts  vetRequest.ts
src/lib/: apiClient.ts  constants.ts  jwtService.ts
src/utils/: typeUtils.ts
